worked on mobile bug

--- a/styles.css
+++ b/styles.css
@@ -549,6 +549,10 @@ footer {
 
 @media only screen and (max-width: 414px) {
     
+    html, body {
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
       body {
         position: relative;
     }
